Cleanup the code: 1. new Long(value) replaced for Long.valueOf(value) 2. new String() removed 3. new Boolean(true/false) replaced to Boolean.TRUE/FALSE 4. Unused packages were removed from seam.plugins 5. Throwing of NullPointerException replaced to IllegalArgument Exception 6. catch Exception replaced to particular Exception types in several places
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@5389 a97e2381-89e5-4abb-bab3-167db6db766c